--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <title>Trotsky-Blog</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="description" content="Description">
+    <link rel="icon" href="./img/avatar.jpg" type="image/x-icon"/>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
+    <link rel="stylesheet" href="./css/vue.css">
+
+    <style>
+        @font-face{
+            font-family: 'JetBrainsMono';
+            src : url('./webfonts/JetBrainsMono-Regular.ttf');
+        }
+        body,td,th {font-family: 'JetBrainsMono',serif}
+    </style>
+
 </head>
 <body>
+<nav>
+    <a href="#/">主页</a>
+    <a href="#/notes">笔记</a>
+</nav>
 <div id="app"></div>
 <script>
     window.$docsify = {
@@ -18,6 +31,6 @@
         coverpage: true
     }
 </script>
-<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+<script src="./js/docsify.min.js"></script>
 </body>
 </html>
