--- a/src/main/resources/META-INF/resources/admin/write.html
+++ b/src/main/resources/META-INF/resources/admin/write.html
@@ -10,6 +10,17 @@
     <link href="../css/all.min.css" rel="stylesheet" type="text/css">
     <link href="../css/nunito.css" rel="stylesheet">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/codemirror.css" rel="stylesheet">
+    <link href="../css/toastui-editor.css" rel="stylesheet">
+    <link href="../css/index.css" rel="stylesheet">
+
+    <style>
+        .el-alert {
+            margin-bottom: 10px;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+    </style>
 
 </head>
 
@@ -33,7 +44,7 @@
         <hr class="sidebar-divider my-0">
 
         <!-- Nav Item - Dashboard -->
-        <li class="nav-item active">
+        <li class="nav-item">
             <a class="nav-link" href="home.html">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Dashboard</span></a>
@@ -48,7 +59,7 @@
         </div>
 
         <!-- Nav Item - Charts -->
-        <li class="nav-item">
+        <li class="nav-item active">
             <a class="nav-link" href="write.html">
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>笔记创作</span></a>
@@ -168,129 +179,23 @@
             <div class="container-fluid">
 
                 <!-- Page Heading -->
-                <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                    <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                            class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
-                </div>
-
-                <!-- Content Row -->
-                <div class="row">
-
-                    <!-- Earnings (Monthly) Card Example -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-primary shadow h-100 py-2">
-                            <div class="card-body">
-                                <div class="row no-gutters align-items-center">
-                                    <div class="col mr-2">
-                                        <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">笔记数
-                                        </div>
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800">1</div>
-                                    </div>
-                                    <div class="col-auto">
-                                        <i class="fas fa-calendar fa-2x text-gray-300"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Earnings (Monthly) Card Example -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-success shadow h-100 py-2">
-                            <div class="card-body">
-                                <div class="row no-gutters align-items-center">
-                                    <div class="col mr-2">
-                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">创建天数
-                                        </div>
-                                        <div class="h5 mb-0 font-weight-bold text-gray-800">2</div>
-                                    </div>
-                                    <div class="col-auto">
-                                        <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-
-
-                <!-- Content Row -->
-                <div class="row">
-
-                    <!-- Content Column -->
-                    <div class="col-lg-6 mb-4">
-
-                        <!-- Project Card Example -->
-                        <div class="card shadow mb-4">
-                            <div class="card-header py-3">
-                                <h6 class="m-0 font-weight-bold text-primary">笔记计划</h6>
-                            </div>
-                            <div class="card-body">
-                                <h4 class="small font-weight-bold">C语言从入门到精通 <span class="float-right">20%</span>
-                                </h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 20%"
-                                         aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <h4 class="small font-weight-bold">高数 <span class="float-right">40%</span>
-                                </h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-warning" role="progressbar" style="width: 40%"
-                                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <h4 class="small font-weight-bold">线性代数<span
-                                        class="float-right">60%</span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
-                                         aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <h4 class="small font-weight-bold">一入Java深似海<span class="float-right">80%</span>
-                                </h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 80%"
-                                         aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <h4 class="small font-weight-bold">共产党宣言 <span
-                                        class="float-right">Complete!</span></h4>
-                                <div class="progress">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%"
-                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="col-lg-6 mb-4">
-
-                        <!-- Illustrations -->
-                        <div class="card shadow mb-4">
-                            <div class="card-header py-3">
-                                <h6 class="m-0 font-weight-bold text-primary">未完成笔记</h6>
-                            </div>
-                            <div class="card-body">
-                                <div class="text-center">
-                                    <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
-                                         src="../img/undraw_posting_photo.svg" alt="">
-                                </div>
-                                <p>Add some quality, svg illustrations to your project courtesy of <a target="_blank"
-                                                                                                      rel="nofollow"
-                                                                                                      href="https://undraw.co/">unDraw</a>,
-                                    a constantly updated collection of beautiful svg images that you can use completely
-                                    free and without attribution!</p>
-                                <a target="_blank" rel="nofollow" href="https://undraw.co/">Browse Illustrations on
-                                    unDraw &rarr;</a>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
+                <h1 class="h3 mb-2 text-gray-800">笔记创作</h1>
+                <p class="mb-4">你可以使用MarkDown来创作你的笔记，如果你还不会MarkDown，可以查阅：<a target="_blank"
+                                                                            href="https://www.runoob.com/markdown/md-tutorial.html">《Markdown
+                    教程》</a>.</p>
 
             </div>
+
+            <div id="app">
+                <el-alert
+                        title="Trotsky暂时不支持上传图片，请使用图床"
+                        type="warning">
+                </el-alert>
+
+                <div id="editor"></div>
+            </div>
+
+
             <!-- /.container-fluid -->
 
         </div>
@@ -309,9 +214,8 @@
     </div>
     <!-- End of Content Wrapper -->
 
+    <!-- End of Page Wrapper -->
 </div>
-<!-- End of Page Wrapper -->
-
 <!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
@@ -338,18 +242,78 @@
 </div>
 
 <!-- Bootstrap core JavaScript-->
+<script src="../js/babel.min.js"></script>
 <script src="../js/jquery-3.3.1.min.js"></script>
+
+<script src="../js/toastui-jquery-editor.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
+<script src="../js/vue.js"></script>
+<script src="../js/index.js"></script>
 
 <!-- Core plugin JavaScript-->
 <script src="../js/jquery.easing.min.js"></script>
 
-<!-- Page level plugins -->
-<script src="../js/Chart.min.js"></script>
+<script type="application/javascript">
+    const content = [
+        '![image](https://uicdn.toast.com/toastui/img/tui-editor-bi.png)',
+        '',
+        '# Heading 1',
+        '## Heading 2',
+        '### Heading 3',
+        '#### Heading 4',
+        '##### Heading 5',
+        '###### Heading 6',
+        '',
+        '**bold** *italic* ~~strikethrough~~',
+        '<span style="color:#e11d21;">Color Syntax</span>',
+        '[link](https://nhn.github.io/tui.editor/)',
+        '',
+        '---',
+        'horizontal line',
+        '***',
+        '',
+        '> block quote',
+        '>> block quote (2 depth)',
+        '>>> block quote (3 depth)',
+        '',
+        '* list',
+        '    * list indented',
+        '1. ordered',
+        '2. list',
+        '    1. ordered list',
+        '    2. indented',
+        '',
+        '- [ ] task',
+        '- [x] list completed',
+        '',
+        '`inline code`',
+        '',
+        '    code block',
+        '```js',
+        'console.log("fenced code block");',
+        '```',
+        '<pre>**HTML block**</pre>',
+        '',
+        '| table | head |',
+        '| ----  | ---- |',
+        '| table | body |'
+    ].join('\n');
 
-<!-- Page level custom scripts -->
-<script src="../js/demo/chart-area-demo.js"></script>
-<script src="../js/demo/chart-pie-demo.js"></script>
+    $('#editor').toastuiEditor({
+        previewStyle: 'vertical',
+        height: '500px',
+        initialValue: content
+    });
+
+    new Vue({
+        el: '#app',
+        data: function () {
+            return {visible: false}
+        }
+    })
+
+</script>
+
 
 </body>
 
